--- a/translations/en-US.json
+++ b/translations/en-US.json
@@ -132,5 +132,83 @@
     "serve.stop": "Stop",
     "serve.stopped": "Stopped",
     "serve.title": "Hugo Preview Service",
-    "serve.url": "Preview URL"
+    "serve.url": "Preview URL",
+    "settings.project.settings": "Project Settings",
+    "settings.hugo.project.path": "Hugo Project Path",
+    "settings.hugo.project.root": "Hugo Project Root Directory",
+    "settings.browse": "Browse",
+    "settings.path.description": "Please enter the root directory path of the Hugo project, which should contain configuration files such as config.toml",
+    "settings.save.settings": "Save Settings",
+    "settings.folder.browser.title": "Select Hugo Project Folder",
+    "settings.loading": "Loading...",
+    "settings.current.path": "Current Path",
+    "settings.folder.name": "Folder Name",
+    "settings.type": "Type",
+    "settings.actions": "Actions",
+    "settings.cancel": "Cancel",
+    "settings.select.current.folder": "Select Current Folder",
+    "settings.description": "Description:",
+    "settings.config.description": "Hugo project directory should contain configuration files such as config.toml, config.yaml",
+    "settings.articles.from": "Articles will be read from",
+    "settings.images.to": "Images will be uploaded to",
+    "settings.reload.homepage": "After modifying settings, reload the homepage to see the article list of the new project",
+    "settings.error": "Error",
+    "settings.load.folder.failed": "Failed to load folder",
+    "settings.root.directory": "Root Directory",
+    "settings.empty.directory": "This directory is empty",
+    "settings.hugo.project": "Hugo Project",
+    "settings.normal.folder": "Normal Folder",
+    "settings.enter": "Enter",
+    "settings.select": "Select",
+    "settings.hugo.config.title": "Hugo Configuration Management",
+    "settings.hugo.config.description": "Manage basic configuration parameters of Hugo site. Changes require rebuilding the site to take effect.",
+    "settings.site.title": "Site Title *",
+    "settings.site.title.placeholder": "My Hugo Blog",
+    "settings.base.url": "Base URL *",
+    "settings.base.url.placeholder": "https://example.com",
+    "settings.language.code": "Language Code",
+    "settings.theme.name": "Theme Name",
+    "settings.theme.placeholder": "ananke",
+    "settings.timezone": "Timezone",
+    "settings.posts.per.page": "Posts Per Page",
+    "settings.site.description": "Site Description",
+    "settings.site.description.placeholder": "This is a beautiful blog built with Hugo",
+    "settings.author.name": "Author Name",
+    "settings.author.name.placeholder": "Your Name",
+    "settings.author.email": "Author Email",
+    "settings.author.email.placeholder": "author@example.com",
+    "settings.build.drafts": "Include draft posts when building",
+    "settings.build.future": "Include future-dated posts when building",
+    "settings.save.hugo.config": "Save Hugo Configuration",
+    "settings.reload.config": "Reload",
+    "settings.preview.config": "Preview Configuration File",
+    "settings.required.fields": "Please fill in site title and base URL",
+    "settings.save.failed": "Save failed",
+    "settings.hugo.config.saved": "Hugo configuration saved successfully! Configuration file has been updated.",
+    "settings.config.preview": "Hugo Configuration File Preview (config.toml):",
+    "settings.copy.config": "Copy Configuration",
+    "settings.preview.failed": "Preview failed",
+    "settings.config.copied": "Configuration copied to clipboard",
+    "settings.filename.repair.title": "Filename Repair Tool",
+    "settings.filename.repair.description": "If you encounter filename encoding issues or files with special characters cannot be accessed normally, you can use this tool to repair them.",
+    "settings.repair.filenames": "Repair Filename Encoding",
+    "settings.repairing.filenames": "Scanning and repairing filenames...",
+    "settings.repair.success": "Filename repair operation completed!",
+    "settings.repaired.files": "Repaired Files",
+    "settings.no.files.to.repair": "No filenames found that need repair.",
+    "settings.repair.failed.files": "Failed to Repair Files",
+    "settings.repair.failed": "Repair Failed",
+    "hugo.install.title": "Hugo Installation Management",
+    "hugo.install.description": "Check if Hugo is installed. If not installed, you can automatically download and install the latest version.",
+    "hugo.install.checking": "Checking...",
+    "hugo.install.installed": "Hugo Installed",
+    "hugo.install.not.installed": "Hugo Not Installed",
+    "hugo.install.version": "Version",
+    "hugo.install.install.button": "Install Hugo",
+    "hugo.install.location": "Installation Location",
+    "hugo.install.platform": "Platform",
+    "hugo.install.available.version": "Available Version",
+    "hugo.install.installing": "Installing Hugo...",
+    "hugo.install.success": "Hugo installed successfully!",
+    "hugo.install.failed": "Hugo installation failed"
 }
