--- a/translations/ja-JP.json
+++ b/translations/ja-JP.json
@@ -59,11 +59,56 @@
     "files.title.label": "タイトル",
     "files.type": "タイプ",
     "files.upload": "ファイルアップロード",
-    "home.articles": "記事",
-    "home.deploy": "デプロイ",
-    "home.images": "画像",
-    "home.subtitle": "Hugoブログを簡単に管理",
-    "home.title": "Hugo Manager",
+    "home.articles.count": "篇の記事",
+    "home.articles.total": "合計 {count} 篇の記事",
+    "home.card.deploy": "デプロイ管理",
+    "home.card.deploy.desc": "サーバーへのビルドとデプロイ",
+    "home.card.file.management": "ファイル管理",
+    "home.card.file.management.desc": "すべてのファイルを閲覧して編集",
+    "home.card.new.blog": "新しいブログ",
+    "home.card.new.blog.desc": "新しいブログ記事を簡単作成",
+    "home.card.settings": "システム設定",
+    "home.card.settings.desc": "システムパラメータを設定",
+    "home.card.static.files": "静的ファイル",
+    "home.card.static.files.desc": "Hugoプロジェクトの静的ファイルリソースを管理",
+    "home.card.trash": "ゴミ箱",
+    "home.card.trash.desc": "削除された記事を表示",
+    "home.create.now": "今すぐ作成",
+    "home.current.hugo.project": "現在のHugoプロジェクト：",
+    "home.delete.confirm": "この記事を削除しますか？記事はゴミ箱に移動されます。",
+    "home.delete.error": "削除失敗",
+    "home.delete.failed": "削除失敗",
+    "home.delete.success": "記事をゴミ箱に移動しました",
+    "home.edit": "編集",
+    "home.footer.copyright": "Hugo Manager © 2025 - ブログ執筆をより簡単に",
+    "home.manage.files": "ファイル管理",
+    "home.modal.article.title": "記事タイトル *",
+    "home.modal.article.type": "記事タイプ",
+    "home.modal.blog.article": "ブログ記事",
+    "home.modal.cancel": "キャンセル",
+    "home.modal.create.and.edit": "作成して編集",
+    "home.modal.create.error": "作成失敗",
+    "home.modal.create.failed": "作成失敗",
+    "home.modal.new.article": "新しい記事",
+    "home.modal.posts.default": "posts (デフォルト)",
+    "home.modal.save.directory": "保存ディレクトリ",
+    "home.modal.static.page": "静的ページ",
+    "home.modal.title.placeholder": "例：私の初めてのブログ",
+    "home.modal.title.required": "記事タイトルを入力してください",
+    "home.new.article": "新しい記事",
+    "home.no.articles": "記事がありません",
+    "home.no.articles.hint": "上の「新しい記事」ボタンをクリックして執筆を始めましょう！",
+    "home.recent.articles": "最近の記事",
+    "home.refresh": "更新",
+    "home.root.directory": "ルートディレクトリ",
+    "home.search.articles": "記事を検索",
+    "home.search.button": "検索",
+    "home.search.found": "{count} 篇の関連記事が見つかりました",
+    "home.search.no.results": "一致する記事が見つかりません",
+    "home.search.placeholder": "キーワードを入力して記事タイトル、内容を検索...",
+    "home.search.try.different": "別のキーワードで検索してみてください",
+    "home.subtitle": "簡単で効率的なHugo静的ブログ管理ツール",
+    "home.title": "Hugo ブログマネージャー",
     "msg.build.success": "構築が正常に完了しました",
     "msg.connection.test": "接続をテスト中...",
     "msg.deploy.success": "デプロイが正常に完了しました",
@@ -87,5 +132,83 @@
     "serve.stop": "停止",
     "serve.stopped": "停止中",
     "serve.title": "Hugoプレビューサービス",
-    "serve.url": "プレビューURL"
+    "serve.url": "プレビューURL",
+    "settings.project.settings": "プロジェクト設定",
+    "settings.hugo.project.path": "Hugoプロジェクトパス",
+    "settings.hugo.project.root": "Hugoプロジェクトルートディレクトリ",
+    "settings.browse": "参照",
+    "settings.path.description": "config.tomlなどの設定ファイルを含むHugoプロジェクトのルートディレクトリパスを入力してください",
+    "settings.save.settings": "設定を保存",
+    "settings.folder.browser.title": "Hugoプロジェクトフォルダを選択",
+    "settings.loading": "読み込み中...",
+    "settings.current.path": "現在のパス",
+    "settings.folder.name": "フォルダ名",
+    "settings.type": "タイプ",
+    "settings.actions": "アクション",
+    "settings.cancel": "キャンセル",
+    "settings.select.current.folder": "現在のフォルダを選択",
+    "settings.description": "説明：",
+    "settings.config.description": "Hugoプロジェクトディレクトリにはconfig.toml、config.yamlなどの設定ファイルが含まれている必要があります",
+    "settings.articles.from": "記事は以下から読み込まれます",
+    "settings.images.to": "画像は以下にアップロードされます",
+    "settings.reload.homepage": "設定を変更後、ホームページをリロードすると新しいプロジェクトの記事リストが表示されます",
+    "settings.error": "エラー",
+    "settings.load.folder.failed": "フォルダの読み込みに失敗しました",
+    "settings.root.directory": "ルートディレクトリ",
+    "settings.empty.directory": "このディレクトリは空です",
+    "settings.hugo.project": "Hugoプロジェクト",
+    "settings.normal.folder": "通常のフォルダ",
+    "settings.enter": "入る",
+    "settings.select": "選択",
+    "settings.hugo.config.title": "Hugo設定管理",
+    "settings.hugo.config.description": "Hugoサイトの基本設定パラメータを管理します。変更後はサイトを再構築する必要があります。",
+    "settings.site.title": "サイトタイトル *",
+    "settings.site.title.placeholder": "私のHugoブログ",
+    "settings.base.url": "ベースURL *",
+    "settings.base.url.placeholder": "https://example.com",
+    "settings.language.code": "言語コード",
+    "settings.theme.name": "テーマ名",
+    "settings.theme.placeholder": "ananke",
+    "settings.timezone": "タイムゾーン",
+    "settings.posts.per.page": "1ページあたりの投稿数",
+    "settings.site.description": "サイト説明",
+    "settings.site.description.placeholder": "これはHugoで構築された美しいブログです",
+    "settings.author.name": "著者名",
+    "settings.author.name.placeholder": "あなたの名前",
+    "settings.author.email": "著者メール",
+    "settings.author.email.placeholder": "author@example.com",
+    "settings.build.drafts": "構築時に下書き記事を含める",
+    "settings.build.future": "構築時に将来日付の記事を含める",
+    "settings.save.hugo.config": "Hugo設定を保存",
+    "settings.reload.config": "再読み込み",
+    "settings.preview.config": "設定ファイルをプレビュー",
+    "settings.required.fields": "サイトタイトルとベースURLを入力してください",
+    "settings.save.failed": "保存に失敗しました",
+    "settings.hugo.config.saved": "Hugo設定が正常に保存されました！設定ファイルが更新されました。",
+    "settings.config.preview": "Hugo設定ファイルプレビュー (config.toml):",
+    "settings.copy.config": "設定をコピー",
+    "settings.preview.failed": "プレビューに失敗しました",
+    "settings.config.copied": "設定がクリップボードにコピーされました",
+    "settings.filename.repair.title": "ファイル名修復ツール",
+    "settings.filename.repair.description": "ファイル名の文字エンコーディングの問題や特殊文字を含むファイルが正常にアクセスできない場合、このツールを使用して修復できます。",
+    "settings.repair.filenames": "ファイル名エンコーディングを修復",
+    "settings.repairing.filenames": "ファイル名をスキャンして修復中...",
+    "settings.repair.success": "ファイル名修復操作が完了しました！",
+    "settings.repaired.files": "修復されたファイル",
+    "settings.no.files.to.repair": "修復が必要なファイル名は見つかりませんでした。",
+    "settings.repair.failed.files": "修復に失敗したファイル",
+    "settings.repair.failed": "修復に失敗しました",
+    "hugo.install.title": "Hugoインストール管理",
+    "hugo.install.description": "Hugoがインストールされているかチェックし、インストールされていない場合は最新バージョンを自動ダウンロードしてインストールできます。",
+    "hugo.install.checking": "チェック中...",
+    "hugo.install.installed": "Hugoがインストールされています",
+    "hugo.install.not.installed": "Hugoがインストールされていません",
+    "hugo.install.version": "バージョン",
+    "hugo.install.install.button": "Hugoをインストール",
+    "hugo.install.location": "インストール場所",
+    "hugo.install.platform": "プラットフォーム",
+    "hugo.install.available.version": "利用可能なバージョン",
+    "hugo.install.installing": "Hugoをインストール中...",
+    "hugo.install.success": "Hugoが正常にインストールされました！",
+    "hugo.install.failed": "Hugoのインストールに失敗しました"
 }
