--- a/translations/ko-KR.json
+++ b/translations/ko-KR.json
@@ -59,11 +59,56 @@
     "files.title.label": "제목",
     "files.type": "유형",
     "files.upload": "파일 업로드",
-    "home.articles": "글",
-    "home.deploy": "배포",
-    "home.images": "이미지",
-    "home.subtitle": "Hugo 블로그를 쉽게 관리하세요",
-    "home.title": "Hugo 매니저",
+    "home.articles.count": "편의 글",
+    "home.articles.total": "총 {count} 편의 글",
+    "home.card.deploy": "배포 관리",
+    "home.card.deploy.desc": "빌드 및 서버 배포",
+    "home.card.file.management": "파일 관리",
+    "home.card.file.management.desc": "모든 파일 둘러보기 및 편집",
+    "home.card.new.blog": "새 블로그",
+    "home.card.new.blog.desc": "새 블로그 글 빠르게 작성",
+    "home.card.settings": "시스템 설정",
+    "home.card.settings.desc": "시스템 매개변수 구성",
+    "home.card.static.files": "정적 파일",
+    "home.card.static.files.desc": "Hugo 프로젝트의 정적 파일 리소스 관리",
+    "home.card.trash": "휴지통",
+    "home.card.trash.desc": "삭제된 글 보기",
+    "home.create.now": "지금 만들기",
+    "home.current.hugo.project": "현재 Hugo 프로젝트:",
+    "home.delete.confirm": "이 글을 삭제하시겠습니까? 글이 휴지통으로 이동됩니다.",
+    "home.delete.error": "삭제 실패",
+    "home.delete.failed": "삭제 실패",
+    "home.delete.success": "글이 휴지통으로 이동되었습니다",
+    "home.edit": "편집",
+    "home.footer.copyright": "Hugo Manager © 2025 - 블로그 작성을 더 쉽게",
+    "home.manage.files": "파일 관리",
+    "home.modal.article.title": "글 제목 *",
+    "home.modal.article.type": "글 유형",
+    "home.modal.blog.article": "블로그 글",
+    "home.modal.cancel": "취소",
+    "home.modal.create.and.edit": "만들기 및 편집",
+    "home.modal.create.error": "만들기 실패",
+    "home.modal.create.failed": "만들기 실패",
+    "home.modal.new.article": "새 글",
+    "home.modal.posts.default": "posts (기본값)",
+    "home.modal.save.directory": "저장 디렉토리",
+    "home.modal.static.page": "정적 페이지",
+    "home.modal.title.placeholder": "예: 내 첫 번째 블로그",
+    "home.modal.title.required": "글 제목을 입력하세요",
+    "home.new.article": "새 글",
+    "home.no.articles": "글이 없습니다",
+    "home.no.articles.hint": "위의 \"새 글\" 버튼을 클릭하여 작성을 시작하세요!",
+    "home.recent.articles": "최근 글",
+    "home.refresh": "새로 고침",
+    "home.root.directory": "루트 디렉토리",
+    "home.search.articles": "글 검색",
+    "home.search.button": "검색",
+    "home.search.found": "{count}개의 관련 글을 찾았습니다",
+    "home.search.no.results": "일치하는 글을 찾지 못했습니다",
+    "home.search.placeholder": "키워드를 입력하여 글 제목, 내용 검색...",
+    "home.search.try.different": "다른 키워드로 검색해 보세요",
+    "home.subtitle": "간단하고 효율적인 Hugo 정적 블로그 관리 도구",
+    "home.title": "Hugo 블로그 매니저",
     "msg.build.success": "빌드가 성공적으로 완료됨",
     "msg.connection.test": "연결 테스트 중...",
     "msg.deploy.success": "배포가 성공적으로 완료됨",
@@ -87,5 +132,83 @@
     "serve.stop": "중지",
     "serve.stopped": "중지됨",
     "serve.title": "Hugo 미리보기 서비스",
-    "serve.url": "미리보기 URL"
+    "serve.url": "미리보기 URL",
+    "settings.project.settings": "프로젝트 설정",
+    "settings.hugo.project.path": "Hugo 프로젝트 경로",
+    "settings.hugo.project.root": "Hugo 프로젝트 루트 디렉토리",
+    "settings.browse": "찾아보기",
+    "settings.path.description": "config.toml 등의 설정 파일을 포함하는 Hugo 프로젝트의 루트 디렉토리 경로를 입력하세요",
+    "settings.save.settings": "설정 저장",
+    "settings.folder.browser.title": "Hugo 프로젝트 폴더 선택",
+    "settings.loading": "로딩 중...",
+    "settings.current.path": "현재 경로",
+    "settings.folder.name": "폴더 이름",
+    "settings.type": "유형",
+    "settings.actions": "동작",
+    "settings.cancel": "취소",
+    "settings.select.current.folder": "현재 폴더 선택",
+    "settings.description": "설명:",
+    "settings.config.description": "Hugo 프로젝트 디렉토리에는 config.toml, config.yaml 등의 설정 파일이 포함되어야 합니다",
+    "settings.articles.from": "글은 다음에서 읽어옵니다",
+    "settings.images.to": "이미지는 다음에 업로드됩니다",
+    "settings.reload.homepage": "설정 변경 후 홈페이지를 다시 로드하면 새 프로젝트의 글 목록을 볼 수 있습니다",
+    "settings.error": "오류",
+    "settings.load.folder.failed": "폴더 로드 실패",
+    "settings.root.directory": "루트 디렉토리",
+    "settings.empty.directory": "이 디렉토리가 비어있습니다",
+    "settings.hugo.project": "Hugo 프로젝트",
+    "settings.normal.folder": "일반 폴더",
+    "settings.enter": "들어가기",
+    "settings.select": "선택",
+    "settings.hugo.config.title": "Hugo 설정 관리",
+    "settings.hugo.config.description": "Hugo 사이트의 기본 설정 매개변수를 관리합니다. 변경 후에는 사이트를 다시 빌드해야 적용됩니다.",
+    "settings.site.title": "사이트 제목 *",
+    "settings.site.title.placeholder": "내 Hugo 블로그",
+    "settings.base.url": "기본 URL *",
+    "settings.base.url.placeholder": "https://example.com",
+    "settings.language.code": "언어 코드",
+    "settings.theme.name": "테마 이름",
+    "settings.theme.placeholder": "ananke",
+    "settings.timezone": "시간대",
+    "settings.posts.per.page": "페이지당 게시글 수",
+    "settings.site.description": "사이트 설명",
+    "settings.site.description.placeholder": "이것은 Hugo로 만든 아름다운 블로그입니다",
+    "settings.author.name": "저자 이름",
+    "settings.author.name.placeholder": "당신의 이름",
+    "settings.author.email": "저자 이메일",
+    "settings.author.email.placeholder": "author@example.com",
+    "settings.build.drafts": "빌드 시 초안 게시글 포함",
+    "settings.build.future": "빌드 시 미래 날짜 게시글 포함",
+    "settings.save.hugo.config": "Hugo 설정 저장",
+    "settings.reload.config": "다시 로드",
+    "settings.preview.config": "설정 파일 미리보기",
+    "settings.required.fields": "사이트 제목과 기본 URL을 입력하세요",
+    "settings.save.failed": "저장 실패",
+    "settings.hugo.config.saved": "Hugo 설정이 성공적으로 저장되었습니다! 설정 파일이 업데이트되었습니다.",
+    "settings.config.preview": "Hugo 설정 파일 미리보기 (config.toml):",
+    "settings.copy.config": "설정 복사",
+    "settings.preview.failed": "미리보기 실패",
+    "settings.config.copied": "설정이 클립보드에 복사되었습니다",
+    "settings.filename.repair.title": "파일명 수리 도구",
+    "settings.filename.repair.description": "파일명 인코딩 문제나 특수 문자가 포함된 파일에 정상적으로 액세스할 수 없는 경우 이 도구를 사용하여 수리할 수 있습니다.",
+    "settings.repair.filenames": "파일명 인코딩 수리",
+    "settings.repairing.filenames": "파일명 스캔 및 수리 중...",
+    "settings.repair.success": "파일명 수리 작업이 완료되었습니다!",
+    "settings.repaired.files": "수리된 파일",
+    "settings.no.files.to.repair": "수리가 필요한 파일명을 찾지 못했습니다.",
+    "settings.repair.failed.files": "수리에 실패한 파일",
+    "settings.repair.failed": "수리 실패",
+    "hugo.install.title": "Hugo 설치 관리",
+    "hugo.install.description": "Hugo가 설치되어 있는지 확인합니다. 설치되어 있지 않다면 최신 버전을 자동으로 다운로드하고 설치할 수 있습니다.",
+    "hugo.install.checking": "확인 중...",
+    "hugo.install.installed": "Hugo 설치됨",
+    "hugo.install.not.installed": "Hugo 설치되지 않음",
+    "hugo.install.version": "버전",
+    "hugo.install.install.button": "Hugo 설치",
+    "hugo.install.location": "설치 위치",
+    "hugo.install.platform": "플랫폼",
+    "hugo.install.available.version": "사용 가능한 버전",
+    "hugo.install.installing": "Hugo 설치 중...",
+    "hugo.install.success": "Hugo 설치 성공!",
+    "hugo.install.failed": "Hugo 설치 실패"
 }
