--- a/translations/ru-RU.json
+++ b/translations/ru-RU.json
@@ -59,11 +59,56 @@
     "files.title.label": "Заголовок",
     "files.type": "Тип",
     "files.upload": "Загрузить файл",
-    "home.articles": "Статьи",
-    "home.deploy": "Развертывание",
-    "home.images": "Изображения",
-    "home.subtitle": "Легко управляйте своим Hugo блогом",
-    "home.title": "Hugo Менеджер",
+    "home.articles.count": "статей",
+    "home.articles.total": "Всего {count} статей",
+    "home.card.deploy": "Управление развертыванием",
+    "home.card.deploy.desc": "Сборка и развертывание на сервер",
+    "home.card.file.management": "Управление файлами",
+    "home.card.file.management.desc": "Просмотр и редактирование всех файлов",
+    "home.card.new.blog": "Новый блог",
+    "home.card.new.blog.desc": "Быстрое создание новых статей блога",
+    "home.card.settings": "Настройки системы",
+    "home.card.settings.desc": "Конфигурирование параметров системы",
+    "home.card.static.files": "Статические файлы",
+    "home.card.static.files.desc": "Управление статическими ресурсами проекта Hugo",
+    "home.card.trash": "Корзина",
+    "home.card.trash.desc": "Просмотр удаленных статей",
+    "home.create.now": "Создать сейчас",
+    "home.current.hugo.project": "Текущий проект Hugo:",
+    "home.delete.confirm": "Вы уверены, что хотите удалить эту статью? Она будет перемещена в корзину.",
+    "home.delete.error": "Ошибка удаления",
+    "home.delete.failed": "Удаление не удалось",
+    "home.delete.success": "Статья перемещена в корзину",
+    "home.edit": "Редактировать",
+    "home.footer.copyright": "Hugo Manager © 2025 - Сделаем ведение блога проще",
+    "home.manage.files": "Управление файлами",
+    "home.modal.article.title": "Заголовок статьи *",
+    "home.modal.article.type": "Тип статьи",
+    "home.modal.blog.article": "Статья блога",
+    "home.modal.cancel": "Отмена",
+    "home.modal.create.and.edit": "Создать и редактировать",
+    "home.modal.create.error": "Ошибка создания",
+    "home.modal.create.failed": "Создание не удалось",
+    "home.modal.new.article": "Новая статья",
+    "home.modal.posts.default": "posts (по умолчанию)",
+    "home.modal.save.directory": "Папка для сохранения",
+    "home.modal.static.page": "Статическая страница",
+    "home.modal.title.placeholder": "Например: Мой первый блог",
+    "home.modal.title.required": "Пожалуйста, введите заголовок статьи",
+    "home.new.article": "Новая статья",
+    "home.no.articles": "Нет статей",
+    "home.no.articles.hint": "Нажмите кнопку \"Новая статья\" выше, чтобы начать писать!",
+    "home.recent.articles": "Последние статьи",
+    "home.refresh": "Обновить",
+    "home.root.directory": "Корневая директория",
+    "home.search.articles": "Поиск статей",
+    "home.search.button": "Поиск",
+    "home.search.found": "Найдено {count} связанных статей",
+    "home.search.no.results": "Не найдено соответствующих статей",
+    "home.search.placeholder": "Введите ключевые слова для поиска в заголовках, содержании...",
+    "home.search.try.different": "Попробуйте другие ключевые слова",
+    "home.subtitle": "Простое и эффективное управление статическим блогом Hugo",
+    "home.title": "Менеджер Hugo блога",
     "msg.build.success": "Сборка завершена успешно",
     "msg.connection.test": "Тестирование соединения...",
     "msg.deploy.success": "Развертывание завершено успешно",
@@ -87,5 +132,83 @@
     "serve.stop": "Остановить",
     "serve.stopped": "Остановлен",
     "serve.title": "Сервис предпросмотра Hugo",
-    "serve.url": "URL предпросмотра"
+    "serve.url": "URL предпросмотра",
+    "settings.project.settings": "Настройки проекта",
+    "settings.hugo.project.path": "Путь к проекту Hugo",
+    "settings.hugo.project.root": "Корневая директория проекта Hugo",
+    "settings.browse": "Обзор",
+    "settings.path.description": "Пожалуйста, введите путь к корневой директории проекта Hugo, которая должна содержать файлы конфигурации такие как config.toml",
+    "settings.save.settings": "Сохранить настройки",
+    "settings.folder.browser.title": "Выбрать папку проекта Hugo",
+    "settings.loading": "Загрузка...",
+    "settings.current.path": "Текущий путь",
+    "settings.folder.name": "Имя папки",
+    "settings.type": "Тип",
+    "settings.actions": "Действия",
+    "settings.cancel": "Отмена",
+    "settings.select.current.folder": "Выбрать текущую папку",
+    "settings.description": "Описание:",
+    "settings.config.description": "Папка проекта Hugo должна содержать файлы конфигурации такие как config.toml, config.yaml",
+    "settings.articles.from": "Статьи будут читаться из",
+    "settings.images.to": "Изображения будут загружены в",
+    "settings.reload.homepage": "После изменения настроек перезагрузите главную страницу, чтобы увидеть список статей нового проекта",
+    "settings.error": "Ошибка",
+    "settings.load.folder.failed": "Не удалось загрузить папку",
+    "settings.root.directory": "Корневая директория",
+    "settings.empty.directory": "Эта директория пуста",
+    "settings.hugo.project": "Проект Hugo",
+    "settings.normal.folder": "Обычная папка",
+    "settings.enter": "Войти",
+    "settings.select": "Выбрать",
+    "settings.hugo.config.title": "Управление конфигурацией Hugo",
+    "settings.hugo.config.description": "Управление основными параметрами конфигурации сайта Hugo. Изменения потребуют пересборки сайта.",
+    "settings.site.title": "Заголовок сайта *",
+    "settings.site.title.placeholder": "Мой блог Hugo",
+    "settings.base.url": "Базовый URL *",
+    "settings.base.url.placeholder": "https://example.com",
+    "settings.language.code": "Код языка",
+    "settings.theme.name": "Имя темы",
+    "settings.theme.placeholder": "ananke",
+    "settings.timezone": "Часовой пояс",
+    "settings.posts.per.page": "Постов на страницу",
+    "settings.site.description": "Описание сайта",
+    "settings.site.description.placeholder": "Это красивый блог, построенный с помощью Hugo",
+    "settings.author.name": "Имя автора",
+    "settings.author.name.placeholder": "Ваше имя",
+    "settings.author.email": "Email автора",
+    "settings.author.email.placeholder": "author@example.com",
+    "settings.build.drafts": "Включать черновики при сборке",
+    "settings.build.future": "Включать посты с будущими датами при сборке",
+    "settings.save.hugo.config": "Сохранить конфигурацию Hugo",
+    "settings.reload.config": "Перезагрузить",
+    "settings.preview.config": "Предпросмотр файла конфигурации",
+    "settings.required.fields": "Пожалуйста, заполните заголовок сайта и базовый URL",
+    "settings.save.failed": "Ошибка сохранения",
+    "settings.hugo.config.saved": "Конфигурация Hugo успешно сохранена! Конфигурационный файл обновлен.",
+    "settings.config.preview": "Предпросмотр файла конфигурации Hugo (config.toml):",
+    "settings.copy.config": "Скопировать конфигурацию",
+    "settings.preview.failed": "Ошибка предпросмотра",
+    "settings.config.copied": "Конфигурация скопирована в буфер обмена",
+    "settings.filename.repair.title": "Инструмент восстановления имен файлов",
+    "settings.filename.repair.description": "Если возникают проблемы с кодировкой имен файлов или файлы со специальными символами не могут быть открыты, вы можете использовать этот инструмент для их восстановления.",
+    "settings.repair.filenames": "Восстановить кодировку имен файлов",
+    "settings.repairing.filenames": "Сканирование и восстановление имен файлов...",
+    "settings.repair.success": "Операция восстановления имен файлов завершена!",
+    "settings.repaired.files": "Восстановленные файлы",
+    "settings.no.files.to.repair": "Не найдено файлов, которые нуждаются в восстановлении.",
+    "settings.repair.failed.files": "Не удалось восстановить файлы",
+    "settings.repair.failed": "Ошибка восстановления",
+    "hugo.install.title": "Управление установкой Hugo",
+    "hugo.install.description": "Проверить, установлен ли Hugo. Если нет, можно автоматически скачать и установить последнюю версию.",
+    "hugo.install.checking": "Проверка...",
+    "hugo.install.installed": "Hugo установлен",
+    "hugo.install.not.installed": "Hugo не установлен",
+    "hugo.install.version": "Версия",
+    "hugo.install.install.button": "Установить Hugo",
+    "hugo.install.location": "Место установки",
+    "hugo.install.platform": "Платформа",
+    "hugo.install.available.version": "Доступная версия",
+    "hugo.install.installing": "Установка Hugo...",
+    "hugo.install.success": "Hugo успешно установлен!",
+    "hugo.install.failed": "Ошибка установки Hugo"
 }
