--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -132,5 +132,83 @@
     "serve.stop": "停止",
     "serve.stopped": "未运行",
     "serve.title": "Hugo 预览服务",
-    "serve.url": "预览地址"
+    "serve.url": "预览地址",
+    "settings.project.settings": "项目设置",
+    "settings.hugo.project.path": "Hugo 项目路径",
+    "settings.hugo.project.root": "Hugo 项目根目录",
+    "settings.browse": "浏览",
+    "settings.path.description": "请输入Hugo项目的根目录路径，该目录应包含config.toml等配置文件",
+    "settings.save.settings": "保存设置",
+    "settings.folder.browser.title": "选择Hugo项目文件夹",
+    "settings.loading": "加载中...",
+    "settings.current.path": "当前路径",
+    "settings.folder.name": "文件夹名称",
+    "settings.type": "类型",
+    "settings.actions": "操作",
+    "settings.cancel": "取消",
+    "settings.select.current.folder": "选择当前文件夹",
+    "settings.description": "说明：",
+    "settings.config.description": "Hugo项目目录应包含config.toml、config.yaml等配置文件",
+    "settings.articles.from": "文章将从",
+    "settings.images.to": "图片将上传到",
+    "settings.reload.homepage": "修改设置后，重新加载首页即可看到新项目的文章列表",
+    "settings.error": "错误",
+    "settings.load.folder.failed": "加载文件夹失败",
+    "settings.root.directory": "根目录",
+    "settings.empty.directory": "此目录为空",
+    "settings.hugo.project": "Hugo项目",
+    "settings.normal.folder": "普通文件夹",
+    "settings.enter": "进入",
+    "settings.select": "选择",
+    "settings.hugo.config.title": "Hugo配置管理",
+    "settings.hugo.config.description": "管理Hugo站点的基本配置参数，修改后需要重新构建站点才能生效。",
+    "settings.site.title": "站点标题 *",
+    "settings.site.title.placeholder": "我的Hugo博客",
+    "settings.base.url": "基础URL *",
+    "settings.base.url.placeholder": "https://example.com",
+    "settings.language.code": "语言代码",
+    "settings.theme.name": "主题名称",
+    "settings.theme.placeholder": "ananke",
+    "settings.timezone": "时区",
+    "settings.posts.per.page": "每页文章数",
+    "settings.site.description": "站点描述",
+    "settings.site.description.placeholder": "这是一个用Hugo构建的精美博客",
+    "settings.author.name": "作者姓名",
+    "settings.author.name.placeholder": "您的名字",
+    "settings.author.email": "作者邮箱",
+    "settings.author.email.placeholder": "author@example.com",
+    "settings.build.drafts": "构建时包含草稿文章",
+    "settings.build.future": "构建时包含未来日期的文章",
+    "settings.save.hugo.config": "保存Hugo配置",
+    "settings.reload.config": "重新加载",
+    "settings.preview.config": "预览配置文件",
+    "settings.required.fields": "请填写站点标题和基础URL",
+    "settings.save.failed": "保存失败",
+    "settings.hugo.config.saved": "Hugo配置保存成功！配置文件已更新。",
+    "settings.config.preview": "Hugo配置文件预览 (config.toml):",
+    "settings.copy.config": "复制配置",
+    "settings.preview.failed": "预览失败",
+    "settings.config.copied": "配置已复制到剪贴板",
+    "settings.filename.repair.title": "文件名修复工具",
+    "settings.filename.repair.description": "如果遇到文件名编码问题或包含特殊字符的文件无法正常访问，可以使用此工具修复。",
+    "settings.repair.filenames": "修复文件名编码",
+    "settings.repairing.filenames": "正在扫描和修复文件名...",
+    "settings.repair.success": "文件名修复操作完成！",
+    "settings.repaired.files": "修复的文件",
+    "settings.no.files.to.repair": "没有发现需要修复的文件名。",
+    "settings.repair.failed.files": "修复失败的文件",
+    "settings.repair.failed": "修复失败",
+    "hugo.install.title": "Hugo安装管理",
+    "hugo.install.description": "检查Hugo是否已安装，如未安装可自动下载并安装最新版本。",
+    "hugo.install.checking": "检查中...",
+    "hugo.install.installed": "Hugo已安装",
+    "hugo.install.not.installed": "Hugo未安装",
+    "hugo.install.version": "版本",
+    "hugo.install.install.button": "安装Hugo",
+    "hugo.install.location": "安装位置",
+    "hugo.install.platform": "平台",
+    "hugo.install.available.version": "可用版本",
+    "hugo.install.installing": "正在安装Hugo...",
+    "hugo.install.success": "Hugo安装成功！",
+    "hugo.install.failed": "Hugo安装失败"
 }
