--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -59,11 +59,56 @@
     "files.title.label": "標題",
     "files.type": "類型",
     "files.upload": "上傳檔案",
-    "home.articles": "文章",
-    "home.deploy": "部署",
-    "home.images": "圖片",
-    "home.subtitle": "輕鬆管理您的 Hugo 部落格",
-    "home.title": "Hugo 管理器",
+    "home.articles.count": "篇文章",
+    "home.articles.total": "共 {count} 篇文章",
+    "home.card.deploy": "部署管理",
+    "home.card.deploy.desc": "建立和部署到伺服器",
+    "home.card.file.management": "檔案管理",
+    "home.card.file.management.desc": "瀏覽和編輯所有檔案",
+    "home.card.new.blog": "新建部落格",
+    "home.card.new.blog.desc": "快速建立新的部落格文章",
+    "home.card.settings": "系統設定",
+    "home.card.settings.desc": "配置系統參數",
+    "home.card.static.files": "靜態檔案",
+    "home.card.static.files.desc": "管理Hugo專案的靜態檔案資源",
+    "home.card.trash": "資源回收筒",
+    "home.card.trash.desc": "檢視已刪除的文章",
+    "home.create.now": "立即建立",
+    "home.current.hugo.project": "目前Hugo專案：",
+    "home.delete.confirm": "確定要刪除這篇文章嗎？文章將移至資源回收筒。",
+    "home.delete.error": "刪除失敗",
+    "home.delete.failed": "刪除失敗",
+    "home.delete.success": "文章已移至資源回收筒",
+    "home.edit": "編輯",
+    "home.footer.copyright": "Hugo Manager © 2025 - 讓部落格寫作更簡單",
+    "home.manage.files": "管理檔案",
+    "home.modal.article.title": "文章標題 *",
+    "home.modal.article.type": "文章類型",
+    "home.modal.blog.article": "部落格文章",
+    "home.modal.cancel": "取消",
+    "home.modal.create.and.edit": "建立並編輯",
+    "home.modal.create.error": "建立失敗",
+    "home.modal.create.failed": "建立失敗",
+    "home.modal.new.article": "新建文章",
+    "home.modal.posts.default": "posts (預設)",
+    "home.modal.save.directory": "儲存目錄",
+    "home.modal.static.page": "靜態頁面",
+    "home.modal.title.placeholder": "例如：我的第一篇部落格",
+    "home.modal.title.required": "請輸入文章標題",
+    "home.new.article": "新建文章",
+    "home.no.articles": "暫無文章",
+    "home.no.articles.hint": "點擊上方「新建文章」按鈕開始創作吧！",
+    "home.recent.articles": "最近文章",
+    "home.refresh": "重新整理",
+    "home.root.directory": "根目錄",
+    "home.search.articles": "搜尋文章",
+    "home.search.button": "搜尋",
+    "home.search.found": "找到 {count} 篇相關文章",
+    "home.search.no.results": "未找到匹配的文章",
+    "home.search.placeholder": "輸入關鍵詞搜尋文章標題、內容...",
+    "home.search.try.different": "嘗試使用不同的關鍵詞進行搜尋",
+    "home.subtitle": "簡單、高效的Hugo靜態部落格管理工具",
+    "home.title": "Hugo 部落格管理器",
     "msg.build.success": "建立完成",
     "msg.connection.test": "正在測試連線...",
     "msg.deploy.success": "部署完成",
@@ -87,5 +132,83 @@
     "serve.stop": "停止",
     "serve.stopped": "未執行",
     "serve.title": "Hugo 預覽服務",
-    "serve.url": "預覽位址"
+    "serve.url": "預覽位址",
+    "settings.project.settings": "項目設定",
+    "settings.hugo.project.path": "Hugo 項目路徑",
+    "settings.hugo.project.root": "Hugo 項目根目錄",
+    "settings.browse": "瀏覽",
+    "settings.path.description": "請輸入Hugo項目的根目錄路徑，該目錄應包含config.toml等配置檔案",
+    "settings.save.settings": "儲存設定",
+    "settings.folder.browser.title": "選擇Hugo項目資料夾",
+    "settings.loading": "載入中...",
+    "settings.current.path": "目前路徑",
+    "settings.folder.name": "資料夾名稱",
+    "settings.type": "類型",
+    "settings.actions": "操作",
+    "settings.cancel": "取消",
+    "settings.select.current.folder": "選擇目前資料夾",
+    "settings.description": "說明：",
+    "settings.config.description": "Hugo項目目錄應包含config.toml、config.yaml等配置檔案",
+    "settings.articles.from": "文章將從",
+    "settings.images.to": "圖片將上傳到",
+    "settings.reload.homepage": "修改設定後，重新載入首頁即可看到新項目的文章列表",
+    "settings.error": "錯誤",
+    "settings.load.folder.failed": "載入資料夾失敗",
+    "settings.root.directory": "根目錄",
+    "settings.empty.directory": "此目錄為空",
+    "settings.hugo.project": "Hugo項目",
+    "settings.normal.folder": "一般資料夾",
+    "settings.enter": "進入",
+    "settings.select": "選擇",
+    "settings.hugo.config.title": "Hugo配置管理",
+    "settings.hugo.config.description": "管理Hugo站點的基本配置參數，修改後需要重新建立站點才能生效。",
+    "settings.site.title": "站點標題 *",
+    "settings.site.title.placeholder": "我的Hugo部落格",
+    "settings.base.url": "基礎URL *",
+    "settings.base.url.placeholder": "https://example.com",
+    "settings.language.code": "語言代碼",
+    "settings.theme.name": "主題名稱",
+    "settings.theme.placeholder": "ananke",
+    "settings.timezone": "時區",
+    "settings.posts.per.page": "每頁文章數",
+    "settings.site.description": "站點描述",
+    "settings.site.description.placeholder": "這是一個用Hugo建立的精美部落格",
+    "settings.author.name": "作者姓名",
+    "settings.author.name.placeholder": "您的名字",
+    "settings.author.email": "作者電子郵件",
+    "settings.author.email.placeholder": "author@example.com",
+    "settings.build.drafts": "建立時包含草稿文章",
+    "settings.build.future": "建立時包含未來日期的文章",
+    "settings.save.hugo.config": "儲存Hugo配置",
+    "settings.reload.config": "重新載入",
+    "settings.preview.config": "預覽配置檔案",
+    "settings.required.fields": "請填寫站點標題和基礎URL",
+    "settings.save.failed": "儲存失敗",
+    "settings.hugo.config.saved": "Hugo配置儲存成功！配置檔案已更新。",
+    "settings.config.preview": "Hugo配置檔案預覽 (config.toml):",
+    "settings.copy.config": "複製配置",
+    "settings.preview.failed": "預覽失敗",
+    "settings.config.copied": "配置已複製到剪貼簿",
+    "settings.filename.repair.title": "檔案名修復工具",
+    "settings.filename.repair.description": "如果遇到檔案名編碼問題或包含特殊字元的檔案無法正常存取，可以使用此工具修復。",
+    "settings.repair.filenames": "修復檔案名編碼",
+    "settings.repairing.filenames": "正在掃描和修復檔案名...",
+    "settings.repair.success": "檔案名修復操作完成！",
+    "settings.repaired.files": "修復的檔案",
+    "settings.no.files.to.repair": "沒有發現需要修復的檔案名。",
+    "settings.repair.failed.files": "修復失敗的檔案",
+    "settings.repair.failed": "修復失敗",
+    "hugo.install.title": "Hugo安裝管理",
+    "hugo.install.description": "檢查Hugo是否已安裝，如未安裝可自動下載並安裝最新版本。",
+    "hugo.install.checking": "檢查中...",
+    "hugo.install.installed": "Hugo已安裝",
+    "hugo.install.not.installed": "Hugo未安裝",
+    "hugo.install.version": "版本",
+    "hugo.install.install.button": "安裝Hugo",
+    "hugo.install.location": "安裝位置",
+    "hugo.install.platform": "平台",
+    "hugo.install.available.version": "可用版本",
+    "hugo.install.installing": "正在安裝Hugo...",
+    "hugo.install.success": "Hugo安裝成功！",
+    "hugo.install.failed": "Hugo安裝失敗"
 }
